general page, words pages, v1.0

--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,175 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>static-site-boilerplate index</title>
+    <title>Deepface</title>
     <analytics></analytics>
+    <!-- <style media="screen">
+      body {
+        margin: 0 auto;
+      }
+      h1 {
+        max-width: 924px;
+        text-align: left;
+        margin: 20px auto;
+        font-family: 'ADC-Semi-Bold';
+        font-size: 36px;
+      }
+      .cards {
+        max-width: 924px;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        align-content: center;
+        margin: 0 auto;
+        gap: 4px 4px;
+      }
+      .card {
+        width: 100%;
+        /* height: 500px; */
+        background: grey;
+        /* margin: 4px; */
+        cursor: pointer;
+        background-size: 100% auto;
+        background-repeat: no-repeat;
+        vertical-align: top;
+        padding-bottom: 177.8%;
+        box-sizing: border-box;
+        position: relative;
+      }
+      .card > a {
+        display: block;
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+      }
+      .n1 {
+        background-image: url('./images/CJM.png');
+      }
+      .n2 {
+        background-image: url('./images/custdev.png');
+      }
+      .n3 {
+        background-image: url('./images/figma.png');
+      }
+      .n4 {
+        background-image: url('./images/guerrilla-marketing.png');
+      }
+      .n5 {
+        background-image: url('./images/illustrator.png');
+      }
+      .n6 {
+        background-image: url('./images/Indesign.png');
+      }
+      .n7 {
+        background-image: url('./images/JTBD-1.png');
+      }
+      .n8 {
+        background-image: url('./images/JTBD.png');
+      }
+      .n9 {
+        background-image: url('./images/KPI.png');
+      }
+      .n10 {
+        background-image: url('./images/newsjacking.png');
+      }
+      .n11 {
+        background-image: url('./images/photoshop.png');
+      }
+      .n12 {
+        background-image: url('./images/readymag.png');
+      }
+      .n13 {
+        background-image: url('./images/situational-marketing.png');
+      }
+      .n14 {
+        background-image: url('./images/sketch.png');
+      }
+      .n15 {
+        background-image: url('./images/soft.png');
+      }
+      .n16 {
+        background-image: url('./images/tilda.png');
+      }
+      .n17 {
+        background-image: url('./images/userstories.png');
+      }
+      .n18 {
+        background-image: url('./images/UTP.png');
+      }
+      @media all and (max-device-width: 1280px) {
+        .h1 {
+          font-size: 18px;
+        }
+      }
+    </style> -->
   </head>
 
   <body class="index">
-    <div class="images">
+    <h1>Cловарь Дипфейса</h1>
+    <div class="cards">
+      <div class="card n1">
+        <a href="./words/CJM-customer-journey-map.html" target="_blank"></a>
+      </div>
+      <div class="card n2">
+        <a href="./words/custdev.html" target="_blank"></a>
+      </div>
+      <div class="card n3">
+        <a href="./words/Figma.html" target="_blank"></a>
+      </div>
+      <div class="card n4">
+        <a href="./words/partizanskiy-marketing.html" target="_blank"></a>
+      </div>
+      <div class="card n5">
+        <a href="./words/Illustrator.html" target="_blank"></a>
+      </div>
+      <div class="card n6">
+        <a href="./words/Indesign.html" target="_blank"></a>
+      </div>
+      <div class="card n7">
+        <a href="./words/job-stories.html" target="_blank"></a>
+      </div>
+      <div class="card n8">
+        <a href="./words/JBTD-jobs-to-be-done.html" target="_blank"></a>
+      </div>
+      <div class="card n9">
+        <a
+          href="./words/KPI-key-perfomance-indicators.html"
+          target="_blank"
+        ></a>
+      </div>
+      <div class="card n10">
+        <a href="./words/newsjacking.html" target="_blank"></a>
+      </div>
+      <div class="card n11">
+        <a href="./words/Photoshop.html" target="_blank"></a>
+      </div>
+      <div class="card n12">
+        <a href="./words/Readymag.html" target="_blank"></a>
+      </div>
+      <div class="card n13">
+        <a href="./words/situacionniy-marketing.html" target="_blank"></a>
+      </div>
+      <div class="card n14">
+        <a href="./words/Sketch.html" target="_blank"></a>
+      </div>
+      <div class="card n15">
+        <a href="./words/soft.html" target="_blank"></a>
+      </div>
+      <div class="card n16">
+        <a href="./words/Tilda.html" target="_blank"></a>
+      </div>
+      <div class="card n17">
+        <a href="./words/user-stories.html" target="_blank"></a>
+      </div>
+      <div class="card n18">
+        <a
+          href="./words/UTP-unikalnoe-torgovoe-predlozshenie.html"
+          target="_blank"
+        ></a>
+      </div>
+    </div>
+    <!-- <div class="images">
       <div class="image" id="bgPNG"></div>
       <div class="image" id="bgJPG"></div>
       <div class="image" id="bgSVG"></div>
@@ -16,7 +179,7 @@
       <img src="images/image.svg" />
     </div>
 
-    <div>This is a landing page</div>
-    <a href="./pages/page.html">Go to an internal page</a>
+    <div>Example</div>
+    <a href="./pages/page.html">Go to an internal page</a> -->
   </body>
 </html>
