delete target: _blank

--- a/src/index.html
+++ b/src/index.html
@@ -10,64 +10,58 @@
     <h1>Cловарь Дипфейса</h1>
     <div class="cards">
       <div class="card n1">
-        <a href="./words/CJM-customer-journey-map.html" target="_blank"></a>
+        <a href="./words/CJM-customer-journey-map.html"></a>
       </div>
       <div class="card n2">
-        <a href="./words/custdev.html" target="_blank"></a>
+        <a href="./words/custdev.html"></a>
       </div>
       <div class="card n3">
-        <a href="./words/Figma.html" target="_blank"></a>
+        <a href="./words/Figma.html"></a>
       </div>
       <div class="card n4">
-        <a href="./words/partizanskiy-marketing.html" target="_blank"></a>
+        <a href="./words/partizanskiy-marketing.html"></a>
       </div>
       <div class="card n5">
-        <a href="./words/Illustrator.html" target="_blank"></a>
+        <a href="./words/Illustrator.html"></a>
       </div>
       <div class="card n6">
-        <a href="./words/Indesign.html" target="_blank"></a>
+        <a href="./words/Indesign.html"></a>
       </div>
       <div class="card n7">
-        <a href="./words/job-stories.html" target="_blank"></a>
+        <a href="./words/job-stories.html"></a>
       </div>
       <div class="card n8">
-        <a href="./words/JBTD-jobs-to-be-done.html" target="_blank"></a>
+        <a href="./words/JBTD-jobs-to-be-done.html"></a>
       </div>
       <div class="card n9">
-        <a
-          href="./words/KPI-key-perfomance-indicators.html"
-          target="_blank"
-        ></a>
+        <a href="./words/KPI-key-perfomance-indicators.html"></a>
       </div>
       <div class="card n10">
-        <a href="./words/newsjacking.html" target="_blank"></a>
+        <a href="./words/newsjacking.html"></a>
       </div>
       <div class="card n11">
-        <a href="./words/Photoshop.html" target="_blank"></a>
+        <a href="./words/Photoshop.html"></a>
       </div>
       <div class="card n12">
-        <a href="./words/Readymag.html" target="_blank"></a>
+        <a href="./words/Readymag.html"></a>
       </div>
       <div class="card n13">
-        <a href="./words/situacionniy-marketing.html" target="_blank"></a>
+        <a href="./words/situacionniy-marketing.html"></a>
       </div>
       <div class="card n14">
-        <a href="./words/Sketch.html" target="_blank"></a>
+        <a href="./words/Sketch.html"></a>
       </div>
       <div class="card n15">
-        <a href="./words/soft.html" target="_blank"></a>
+        <a href="./words/soft.html"></a>
       </div>
       <div class="card n16">
-        <a href="./words/Tilda.html" target="_blank"></a>
+        <a href="./words/Tilda.html"></a>
       </div>
       <div class="card n17">
-        <a href="./words/user-stories.html" target="_blank"></a>
+        <a href="./words/user-stories.html"></a>
       </div>
       <div class="card n18">
-        <a
-          href="./words/UTP-unikalnoe-torgovoe-predlozshenie.html"
-          target="_blank"
-        ></a>
+        <a href="./words/UTP-unikalnoe-torgovoe-predlozshenie.html"></a>
       </div>
     </div>
   </body>
