--- a/src/index.html
+++ b/src/index.html
@@ -11,9 +11,9 @@
       <div class="image" id="bgPNG"></div>
       <div class="image" id="bgJPG"></div>
       <div class="image" id="bgSVG"></div>
-      <img src="images/image.png" />
-      <img src="images/image.jpg" />
-      <img src="images/image.svg" />
+      <img src="images/image.png" alt="green square"/>
+      <img src="images/image.jpg" alt="green square"/>
+      <img src="images/image.svg" alt="green square"/>
     </div>
 
     <div>This is a landing page</div>
