--- a/src/words/JBTD-jobs-to-be-done.html
+++ b/src/words/JBTD-jobs-to-be-done.html
@@ -2,22 +2,46 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>static-site-boilerplate about</title>
+    <title>JBTD</title>
     <analytics></analytics>
   </head>
 
   <body class="page">
-    <div class="images">
-      <div class="image" id="bgPNG"></div>
-      <div class="image" id="bgJPG"></div>
-      <div class="image" id="bgSVG"></div>
-      <img src="../images/image.png" />
-      <img src="../images/image.jpg" />
-      <img src="../images/image.svg" />
+    <div class="word n8">
+      <h1>словарь дипфейса</h1>
+      <div class="answerMessages">
+        <div class="Question">
+          <p>JBTD</p>
+        </div>
+        <div class="answerMessage">
+          <p>
+            Jobs to Be Done
+            <span class="remark">(работа для выполнения)</span> — теория о
+            поведении пользователя, помогающая исследовать инсайты и трудности
+            клиента. Перед покупкой человек испытывает момент внутренней борьбы.
+            Теория JTBD помогает исследовать этот момент, чтобы разработать
+            более востребованный продукт.
+          </p>
+        </div>
+        <div class="answerMessage">
+          <p>
+            JTBD концентрируется не на том, как клиент пользуется продуктом, а
+            зачем он его купил; на системе принятия решений.
+          </p>
+        </div>
+        <div class="ADCUser">
+          <div class="face">
+            <img src="../images/Face.svg" alt="" />
+          </div>
+          <div class="texting">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+          </div>
+        </div>
+      </div>
+      <div class="logo"></div>
+      <a href="./words/JBTD-jobs-to-be-done.html"></a>
     </div>
-
-    <div>This is an internal page</div>
-    <div id="reactComponentRoot"></div>
-    <a href="../index.html">Back to the landing page</a>
   </body>
 </html>
