--- a/src/words/Sketch.html
+++ b/src/words/Sketch.html
@@ -2,22 +2,41 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>static-site-boilerplate about</title>
+    <title>Sketch</title>
     <analytics></analytics>
   </head>
 
   <body class="page">
-    <div class="images">
-      <div class="image" id="bgPNG"></div>
-      <div class="image" id="bgJPG"></div>
-      <div class="image" id="bgSVG"></div>
-      <img src="../images/image.png" />
-      <img src="../images/image.jpg" />
-      <img src="../images/image.svg" />
+    <div class="word n14">
+      <h1>словарь дипфейса</h1>
+      <div class="answerMessages">
+        <div class="Question">
+          <p>Sketch</p>
+        </div>
+        <div class="answerMessage">
+          <p>
+            Графический редактор для MacOS, используемый в проектировании
+            интерфейсов. Такой же инструмент, как Figma, однако мы используем
+            его реже. В крупных корпорациях, где важна безопасность файлов, он
+            более актуален.
+          </p>
+        </div>
+        <div class="answerIcon">
+          <img src="../images/logo-sketch.png" alt="" />
+        </div>
+        <div class="ADCUser">
+          <div class="face">
+            <img src="../images/Face.svg" alt="" />
+          </div>
+          <div class="texting">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+          </div>
+        </div>
+      </div>
+      <div class="logo"></div>
+      <a href="./words/Sketch.html"></a>
     </div>
-
-    <div>This is an internal page</div>
-    <div id="reactComponentRoot"></div>
-    <a href="../index.html">Back to the landing page</a>
   </body>
 </html>
