--- a/src/words/UTP-unikalnoe-torgovoe-predlozshenie.html
+++ b/src/words/UTP-unikalnoe-torgovoe-predlozshenie.html
@@ -2,22 +2,44 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>static-site-boilerplate about</title>
+    <title>УТП</title>
     <analytics></analytics>
   </head>
 
   <body class="page">
-    <div class="images">
-      <div class="image" id="bgPNG"></div>
-      <div class="image" id="bgJPG"></div>
-      <div class="image" id="bgSVG"></div>
-      <img src="../images/image.png" />
-      <img src="../images/image.jpg" />
-      <img src="../images/image.svg" />
+    <div class="word n18">
+      <div class="answerMessages">
+        <div class="Question">
+          <p>УТП</p>
+        </div>
+        <div class="answerMessage">
+          <p>
+            Уникальное торговое предложение — это презентация товара, в которой
+            описываются исключительные свойства продукта. Задача УТП — найти
+            точки соприкосновения с потребностями потенциальных потребителей и
+            создать положительное впечатление.
+          </p>
+        </div>
+        <div class="answerMessage">
+          <p>
+            По сути, это яркая формулировка ценности вашего товара или услуги.
+            УТП необходимо при разработке лендинга, сайта, коммерческого
+            предложения и любой рекламной продукции.
+          </p>
+        </div>
+        <div class="ADCUser">
+          <div class="face">
+            <img src="../images/Face.svg" alt="" />
+          </div>
+          <div class="texting">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+          </div>
+        </div>
+      </div>
+      <div class="logo"></div>
+      <a href="./words/UTP-unikalnoe-torgovoe-predlozshenie.html"></a>
     </div>
-
-    <div>This is an internal page</div>
-    <div id="reactComponentRoot"></div>
-    <a href="../index.html">Back to the landing page</a>
   </body>
 </html>
