--- a/src/words/custdev.html
+++ b/src/words/custdev.html
@@ -2,22 +2,46 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>static-site-boilerplate about</title>
+    <title>Custdev</title>
     <analytics></analytics>
   </head>
 
   <body class="page">
-    <div class="images">
-      <div class="image" id="bgPNG"></div>
-      <div class="image" id="bgJPG"></div>
-      <div class="image" id="bgSVG"></div>
-      <img src="../images/image.png" />
-      <img src="../images/image.jpg" />
-      <img src="../images/image.svg" />
+    <div class="word">
+      <h1>словарь дипфейса</h1>
+      <div class="answerMessages">
+        <div class="Question">
+          <p>Custdev</p>
+        </div>
+        <div class="answerMessage">
+          <p>
+            Customer Development (развитие потребителя) — тестирование идеи или
+            прототипа продукта на востребованность. То есть, это процесс
+            получения инсайтов от пользователей с помощью интервью и
+            экспериментов.
+          </p>
+        </div>
+        <div class="answerMessage">
+          <p>
+            Кастдев должен проводиться перед запуском MVP
+            <span class="remark"
+              >(Minimum Viable Product — минимально жизнеспособный
+              продукт)</span
+            >. Сначала выявляется проблема, а потом разрабатывается продукт.
+          </p>
+        </div>
+        <div class="ADCUser">
+          <div class="face">
+            <img src="../images/Face.svg" alt="" />
+          </div>
+          <div class="texting">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+          </div>
+        </div>
+      </div>
+      <div class="logo"></div>
     </div>
-
-    <div>This is an internal page</div>
-    <div id="reactComponentRoot"></div>
-    <a href="../index.html">Back to the landing page</a>
   </body>
 </html>
