--- a/src/words/job-stories.html
+++ b/src/words/job-stories.html
@@ -2,22 +2,45 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>static-site-boilerplate about</title>
+    <title>Job Stories</title>
     <analytics></analytics>
   </head>
 
   <body class="page">
-    <div class="images">
-      <div class="image" id="bgPNG"></div>
-      <div class="image" id="bgJPG"></div>
-      <div class="image" id="bgSVG"></div>
-      <img src="../images/image.png" />
-      <img src="../images/image.jpg" />
-      <img src="../images/image.svg" />
+    <div class="word n7">
+      <h1>словарь дипфейса</h1>
+      <div class="answerMessages">
+        <div class="Question">
+          <p>Job Stories</p>
+        </div>
+        <div class="answerMessage">
+          <p>
+            Метод работы над продуктовыми фичами; их UX и UI. В отличие от User
+            Stories, здесь фокус смещается с личных характеристик на контекст;
+            Job Stories выявляют одинаковые мотивы поведения разных людей в
+            конкретных ситуациях.
+          </p>
+        </div>
+        <div class="answerMessage">
+          <p>
+            Формула: Когда я <span class="bold"><описание ситуации></span>, я
+            хочу <span class="bold"><мотивация></span>, чтобы
+            <span class="bold"><результат></span>.
+          </p>
+        </div>
+        <div class="ADCUser">
+          <div class="face">
+            <img src="../images/Face.svg" alt="" />
+          </div>
+          <div class="texting">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+          </div>
+        </div>
+      </div>
+      <div class="logo"></div>
+      <a href="./words/job-stories.html"></a>
     </div>
-
-    <div>This is an internal page</div>
-    <div id="reactComponentRoot"></div>
-    <a href="../index.html">Back to the landing page</a>
   </body>
 </html>
