--- a/src/words/situacionniy-marketing.html
+++ b/src/words/situacionniy-marketing.html
@@ -2,22 +2,40 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>static-site-boilerplate about</title>
+    <title>Ситуативный маркетинг</title>
     <analytics></analytics>
   </head>
 
   <body class="page">
-    <div class="images">
-      <div class="image" id="bgPNG"></div>
-      <div class="image" id="bgJPG"></div>
-      <div class="image" id="bgSVG"></div>
-      <img src="../images/image.png" />
-      <img src="../images/image.jpg" />
-      <img src="../images/image.svg" />
+    <div class="word n13">
+      <h1>словарь дипфейса</h1>
+      <div class="answerMessages">
+        <div class="Question">
+          <p>Ситуативный маркетинг</p>
+        </div>
+        <div class="answerMessage">
+          <p>
+            Реакция бренда на инфоповод, актуальный для его целевой аудитории, с
+            целью продвижения продуктов, повышения узнаваемости или привлечения
+            новых клиентов.
+          </p>
+        </div>
+        <div class="answerImage">
+          <img src="../images/situativ.png" alt="" />
+        </div>
+        <div class="ADCUser">
+          <div class="face">
+            <img src="../images/Face.svg" alt="" />
+          </div>
+          <div class="texting">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+          </div>
+        </div>
+      </div>
+      <div class="logo"></div>
+      <a href="./words/situacionniy-marketing.html"></a>
     </div>
-
-    <div>This is an internal page</div>
-    <div id="reactComponentRoot"></div>
-    <a href="../index.html">Back to the landing page</a>
   </body>
 </html>
