--- a/src/words/soft.html
+++ b/src/words/soft.html
@@ -2,22 +2,42 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>static-site-boilerplate about</title>
+    <title>Soft</title>
     <analytics></analytics>
   </head>
 
   <body class="page">
-    <div class="images">
-      <div class="image" id="bgPNG"></div>
-      <div class="image" id="bgJPG"></div>
-      <div class="image" id="bgSVG"></div>
-      <img src="../images/image.png" />
-      <img src="../images/image.jpg" />
-      <img src="../images/image.svg" />
+    <div class="word">
+      <h1>словарь дипфейса</h1>
+      <div class="answerMessages">
+        <div class="Question">
+          <p>Soft</p>
+        </div>
+        <div class="answerMessage">
+          <p>
+            Сокращение от software — програмное обеспечение, цифровой
+            продукт. На Дизпроге и Дизпроме мы учимся проектировать софт. А для
+            этого, в свою очередь, также используем различный софт.
+          </p>
+        </div>
+        <div class="answerMessage">
+          <p>
+            Далее расскажем, чем именно пользуемся в процессе обучения.
+          </p>
+        </div>
+        <div class="ADCUser">
+          <div class="face">
+            <img src="../images/Face.svg" alt="" />
+          </div>
+          <div class="texting">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+          </div>
+        </div>
+      </div>
+      <div class="logo"></div>
+      <a href="./words/soft.html"></a>
     </div>
-
-    <div>This is an internal page</div>
-    <div id="reactComponentRoot"></div>
-    <a href="../index.html">Back to the landing page</a>
   </body>
 </html>
