--- a/src/words/user-stories.html
+++ b/src/words/user-stories.html
@@ -2,22 +2,46 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>static-site-boilerplate about</title>
+    <title>user stories</title>
     <analytics></analytics>
   </head>
 
   <body class="page">
-    <div class="images">
-      <div class="image" id="bgPNG"></div>
-      <div class="image" id="bgJPG"></div>
-      <div class="image" id="bgSVG"></div>
-      <img src="../images/image.png" />
-      <img src="../images/image.jpg" />
-      <img src="../images/image.svg" />
+    <div class="word n17">
+      <h1>словарь дипфейса</h1>
+      <div class="answerMessages">
+        <div class="Question">
+          <p>user stories</p>
+        </div>
+        <div class="answerMessage">
+          <p>
+            При исследовании аудитории продукта, создается несколько
+            собирательных пользователей. Исходя из их характеристик,
+            составляется пользовательская история, то есть, объясняется роль
+            юзера в системе, его потребность и профит, который он получит после
+            того, как воспользуется фичей.
+          </p>
+        </div>
+        <div class="answerMessage">
+          <p>
+            Формула: Будучи <span class="bold"><роль юзера></span>, я
+            <span class="bold"><хочу что-то сделать></span>, чтобы
+            <span class="bold"><достичь такой-то цели></span>.
+          </p>
+        </div>
+        <div class="ADCUser">
+          <div class="face">
+            <img src="../images/Face.svg" alt="" />
+          </div>
+          <div class="texting">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+          </div>
+        </div>
+      </div>
+      <div class="logo"></div>
+      <a href="./words/user-stories.html"></a>
     </div>
-
-    <div>This is an internal page</div>
-    <div id="reactComponentRoot"></div>
-    <a href="../index.html">Back to the landing page</a>
   </body>
 </html>
