--- a/src/words/CJM-customer-journey-map.html
+++ b/src/words/CJM-customer-journey-map.html
@@ -1,23 +1,44 @@
 <!DOCTYPE html>
-<html lang="en" dir="ltr">
+<html lang="ru" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>static-site-boilerplate about</title>
+    <title>CJM</title>
     <analytics></analytics>
   </head>
 
   <body class="page">
-    <div class="images">
-      <div class="image" id="bgPNG"></div>
-      <div class="image" id="bgJPG"></div>
-      <div class="image" id="bgSVG"></div>
-      <img src="../images/image.png" />
-      <img src="../images/image.jpg" />
-      <img src="../images/image.svg" />
+    <div class="word">
+      <div class="answerMessages">
+        <div class="Question">
+          <p>CJM</p>
+        </div>
+        <div class="answerMessage">
+          <p>
+            Customer Journey Map (карта пути клиента) — часть маркетинговой
+            стратегии, которая заключается в анализе поведения клиента от
+            момента осознания потребности до повторных коммуникаций с компанией.
+            Позволяет увеличить конверсии и продажи.
+          </p>
+        </div>
+        <div class="answerMessage">
+          <p>
+            У нас в вышке CJM — неотъемлимая часть разработки проекта. Чтобы
+            грамотно выстроить карту, мы исследуем аудиторию, проводим опросы,
+            интервью и составляем портрет пользователя.
+          </p>
+        </div>
+        <div class="ADCUser">
+          <div class="face">
+            <img src="../images/Face.svg" alt="" />
+          </div>
+          <div class="texting">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+          </div>
+        </div>
+      </div>
+      <div class="logo"></div>
     </div>
-
-    <div>This is an internal page</div>
-    <div id="reactComponentRoot"></div>
-    <a href="../index.html">Back to the landing page</a>
   </body>
 </html>
