--- a/src/words/Indesign.html
+++ b/src/words/Indesign.html
@@ -2,22 +2,40 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>static-site-boilerplate about</title>
+    <title>Indesign</title>
     <analytics></analytics>
   </head>
 
   <body class="page">
-    <div class="images">
-      <div class="image" id="bgPNG"></div>
-      <div class="image" id="bgJPG"></div>
-      <div class="image" id="bgSVG"></div>
-      <img src="../images/image.png" />
-      <img src="../images/image.jpg" />
-      <img src="../images/image.svg" />
+    <div class="word n6">
+      <h1>словарь дипфейса</h1>
+      <div class="answerMessages">
+        <div class="Question">
+          <p>Indesign</p>
+        </div>
+        <div class="answerMessage">
+          <p>
+            Программа для создания макетов страниц для печатных и цифровых медиа
+            — плакатов, брошюр, книг. В индизайне мы собираем визуальные
+            исследования. Кратко — «индиз».
+          </p>
+        </div>
+        <div class="answerIcon">
+          <img src="../images/logo-id.png" alt="" />
+        </div>
+        <div class="ADCUser">
+          <div class="face">
+            <img src="../images/Face.svg" alt="" />
+          </div>
+          <div class="texting">
+            <div class="dot"></div>
+            <div class="dot"></div>
+            <div class="dot"></div>
+          </div>
+        </div>
+      </div>
+      <div class="logo"></div>
+      <a href="./words/Indesign.html"></a>
     </div>
-
-    <div>This is an internal page</div>
-    <div id="reactComponentRoot"></div>
-    <a href="../index.html">Back to the landing page</a>
   </body>
 </html>
