--- a/src/words/situacionniy-marketing.html
+++ b/src/words/situacionniy-marketing.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>Ситуативный маркетинг</title>
+    <style media="screen">
+      .word .answerMessages .Question {
+        top: -78px;
+      }
+    </style>
     <analytics></analytics>
   </head>
 
